# rag

./: LICENSE  README.md  architecture.drawio  documentation.json  documentation.md  ontology.json  pyproject.toml
schemas/: document.json  entities.json  entity-types.json  knowledge.json  ontology.json  relationships-types.json  relationships.json
scripts/: download-documentation.sh  graph.json  prompt.py
src/scada_chatbot/: database.py  ontology.py  populate.py  utils.py
src/scada_chatbot/document/: __init__.py  __types__.py  embed.py  locator.py  markdown.py  utils.py
src/scada_chatbot/embeding/: __init__.py  __types__.py  hugging.py  openai.py
src/scada_chatbot/entity/: __types__.py  cluster.py  embed.py  entity.py  extract.py  mention.py
src/scada_chatbot/extracting/: __init__.py  __types__.py  openai.py
src/scada_chatbot/parsing/: html.py
src/scada_chatbot/queries/: __types__.py  insert_document.cql  insert_document.py  insert_entity.py  insert_entity.template.cql  insert_semantic_relationship.py  insert_semantic_relationship.template.cql  setup.py  setup.template.cql
src/scada_chatbot/rapid_scada/: __init__.py  __types__.py  layout.py  parse.py
