[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scada_chatbot"
version = "0.1.0"
description = "Scada knowledge graph utilities"
authors = [
    { name="Laurent Christophe", email="laurent.christophe@sirris.be" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "openai",
    "neo4j",
    "jsonschema",
    "pyyaml",
    "html5lib",
    "numpy",
    "tiktoken",
    "sentence_transformers"
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedVariable = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
